error.txt
Inngest step error
SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at runOrchestrator (src\agents\orchestrator.ts:166:55)
    at async (src\inngest\functions\generate-proposal.ts:24:7)
  164 |     const raw = result.candidates?.[0]?.content?.parts?.[0]?.text ?? '{}'
  165 |     const cleaned = raw.replace(/```json\n?|\n?```/g, '').trim()
> 166 |     const pipelineDirective: PipelineDirective = JSON.parse(cleaned)
      |                                                       ^
  167 |
  168 |     const inputTokens = result.usageMetadata?.promptTokenCount ?? 0
  169 |     const outputTokens = result.usageMetadata?.candidatesTokenCount ?? 0
 POST /api/inngest?fnId=nivedanai-generate-proposal&stepId=step 206 in 17.0s (next.js: 8ms, proxy.ts: 25ms, application-code: 17.0s)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 685ms (next.js: 63ms, proxy.ts: 38ms, application-code: 584ms)
 PUT /api/inngest 200 in 51ms (next.js: 7ms, proxy.ts: 10ms, application-code: 33ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 670ms (next.js: 29ms, proxy.ts: 43ms, application-code: 599ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 660ms (next.js: 26ms, proxy.ts: 44ms, application-code: 590ms)
 PUT /api/inngest 200 in 59ms (next.js: 9ms, proxy.ts: 17ms, application-code: 33ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 642ms (next.js: 31ms, proxy.ts: 30ms, application-code: 581ms)
 PUT /api/inngest 200 in 74ms (next.js: 8ms, proxy.ts: 28ms, application-code: 39ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 635ms (next.js: 29ms, proxy.ts: 26ms, application-code: 580ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 656ms (next.js: 28ms, proxy.ts: 30ms, application-code: 597ms)
 PUT /api/inngest 200 in 133ms (next.js: 19ms, proxy.ts: 21ms, application-code: 94ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 2.1s (next.js: 45ms, proxy.ts: 44ms, application-code: 2.1s)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 1513ms (next.js: 48ms, proxy.ts: 33ms, application-code: 1431ms)
 PUT /api/inngest 200 in 111ms (next.js: 16ms, proxy.ts: 27ms, application-code: 68ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 1205ms (next.js: 33ms, proxy.ts: 49ms, application-code: 1123ms)
 PUT /api/inngest 200 in 92ms (next.js: 12ms, proxy.ts: 23ms, application-code: 57ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 1513ms (next.js: 50ms, proxy.ts: 36ms, application-code: 1427ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 654ms (next.js: 38ms, proxy.ts: 30ms, application-code: 585ms)
 PUT /api/inngest 200 in 120ms (next.js: 18ms, proxy.ts: 22ms, application-code: 80ms)
Inngest step error
SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at runOrchestrator (src\agents\orchestrator.ts:166:55)
    at async (src\inngest\functions\generate-proposal.ts:24:7)
  164 |     const raw = result.candidates?.[0]?.content?.parts?.[0]?.text ?? '{}'
  165 |     const cleaned = raw.replace(/```json\n?|\n?```/g, '').trim()
> 166 |     const pipelineDirective: PipelineDirective = JSON.parse(cleaned)
      |                                                       ^
  167 |
  168 |     const inputTokens = result.usageMetadata?.promptTokenCount ?? 0
  169 |     const outputTokens = result.usageMetadata?.candidatesTokenCount ?? 0
 POST /api/inngest?fnId=nivedanai-generate-proposal&stepId=step 206 in 16.4s (next.js: 14ms, proxy.ts: 24ms, application-code: 16.4s)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 2.3s (next.js: 33ms, proxy.ts: 34ms, application-code: 2.3s)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 628ms (next.js: 16ms, proxy.ts: 30ms, application-code: 582ms)
 PUT /api/inngest 200 in 57ms (next.js: 10ms, proxy.ts: 16ms, application-code: 31ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 662ms (next.js: 52ms, proxy.ts: 24ms, application-code: 586ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 639ms (next.js: 33ms, proxy.ts: 22ms, application-code: 584ms)
 PUT /api/inngest 200 in 53ms (next.js: 7ms, proxy.ts: 9ms, application-code: 37ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 716ms (next.js: 43ms, proxy.ts: 31ms, application-code: 642ms)
 PUT /api/inngest 200 in 103ms (next.js: 11ms, proxy.ts: 33ms, application-code: 58ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 668ms (next.js: 45ms, proxy.ts: 27ms, application-code: 596ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 671ms (next.js: 32ms, proxy.ts: 43ms, application-code: 596ms)
 PUT /api/inngest 200 in 86ms (next.js: 15ms, proxy.ts: 20ms, application-code: 51ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 687ms (next.js: 55ms, proxy.ts: 34ms, application-code: 598ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 923ms (next.js: 28ms, proxy.ts: 38ms, application-code: 858ms)
 PUT /api/inngest 200 in 65ms (next.js: 11ms, proxy.ts: 14ms, application-code: 39ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 658ms (next.js: 32ms, proxy.ts: 34ms, application-code: 593ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 688ms (next.js: 45ms, proxy.ts: 36ms, application-code: 607ms)
 PUT /api/inngest 200 in 83ms (next.js: 9ms, proxy.ts: 15ms, application-code: 59ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 676ms (next.js: 32ms, proxy.ts: 31ms, application-code: 614ms)
 PUT /api/inngest 200 in 120ms (next.js: 9ms, proxy.ts: 16ms, application-code: 95ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 706ms (next.js: 65ms, proxy.ts: 48ms, application-code: 593ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 1460ms (next.js: 419ms, proxy.ts: 51ms, application-code: 989ms)
 PUT /api/inngest 200 in 97ms (next.js: 14ms, proxy.ts: 25ms, application-code: 58ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 718ms (next.js: 50ms, proxy.ts: 36ms, application-code: 632ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 660ms (next.js: 31ms, proxy.ts: 37ms, application-code: 592ms)
 PUT /api/inngest 200 in 158ms (next.js: 20ms, proxy.ts: 32ms, application-code: 106ms)
 GET /dashboard 200 in 257ms (next.js: 23ms, proxy.ts: 42ms, application-code: 191ms)
 GET /api/uploadthing 200 in 408ms (next.js: 174ms, proxy.ts: 27ms, application-code: 207ms)
 GET /api/jobs/d01be6dd-b2b0-4d2c-9f81-ef7b7c5eb72c 200 in 937ms (next.js: 107ms, proxy.ts: 36ms, application-code: 793ms)
 GET /api/uploadthing 200 in 272ms (next.js: 73ms, proxy.ts: 138ms, application-code: 60ms)
 GET /api/stats 200 in 1316ms (next.js: 102ms, proxy.ts: 612ms, application-code: 602ms)
 GET /api/stats 200 in 790ms (next.js: 108ms, proxy.ts: 85ms, application-code: 597ms)
 PUT /api/inngest 200 in 88ms (next.js: 14ms, proxy.ts: 18ms, application-code: 56ms)
 GET /api/kb/items 200 in 3.5s (next.js: 221ms, proxy.ts: 458ms, application-code: 2.8s)
 GET /api/kb/items 200 in 961ms (next.js: 34ms, proxy.ts: 34ms, application-code: 893ms)
 POST /dashboard 200 in 258ms (next.js: 22ms, proxy.ts: 35ms, application-code: 201ms)
  └─ ƒ invalidateCacheAction() in 41ms node_modules/@clerk/nextjs/dist/esm/app-router/server-actions.js
 GET / 200 in 194ms (next.js: 16ms, proxy.ts: 28ms, application-code: 149ms)
 PUT /api/inngest 200 in 55ms (next.js: 8ms, proxy.ts: 13ms, application-code: 34ms)
 GET / 200 in 494ms (next.js: 71ms, proxy.ts: 101ms, application-code: 322ms)
 PUT /api/inngest 200 in 61ms (next.js: 7ms, proxy.ts: 13ms, application-code: 41ms)
 PUT /api/inngest 200 in 43ms (next.js: 7ms, proxy.ts: 10ms, application-code: 26ms)
 PUT /api/inngest 200 in 75ms (next.js: 11ms, proxy.ts: 17ms, application-code: 47ms)
Inngest step error
SyntaxError: Unexpected end of JSON input
    at JSON.parse (<anonymous>)
    at runOrchestrator (src\agents\orchestrator.ts:166:55)
    at async (src\inngest\functions\generate-proposal.ts:24:7)
  164 |     const raw = result.candidates?.[0]?.content?.parts?.[0]?.text ?? '{}'
  165 |     const cleaned = raw.replace(/```json\n?|\n?```/g, '').trim()
> 166 |     const pipelineDirective: PipelineDirective = JSON.parse(cleaned)
      |                                                       ^
  167 |
  168 |     const inputTokens = result.usageMetadata?.promptTokenCount ?? 0
  169 |     const outputTokens = result.usageMetadata?.candidatesTokenCount ?? 0
 POST /api/inngest?fnId=nivedanai-generate-proposal&stepId=step 206 in 18.2s (next.js: 17ms, proxy.ts: 24ms, application-code: 18.1s)
 PUT /api/inngest 200 in 99ms (next.js: 6ms, proxy.ts: 25ms, application-code: 68ms)
 PUT /api/inngest 200 in 110ms (next.js: 6ms, proxy.ts: 47ms, application-code: 58ms)
 PUT /api/inngest 200 in 96ms (next.js: 11ms, proxy.ts: 22ms, application-code: 63ms)